# QuixiCore-CPU

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  full-matrix.md  plan.md
.github/workflows/: ci.yml
.quixicore/: backend.yaml
benchmarks/: CMakeLists.txt  README.md
benchmarks/cases/: base_q.cpp  basert.cpp  colibri_ops.cpp  contract_ops.cpp  float_storage.cpp  full_matrix.cpp  gdn.cpp  llama_parity.cpp  lora.cpp  mem_triad.cpp  norm_quant_matrix.cpp  optimization_plan.cpp  ported_ops.cpp  prerequisites.cpp  q8_kv.cpp  qgemv.cpp  qgemv_formats.cpp  quant_cache_attention.cpp  quant_embedding.cpp  quant_import.cpp  quant_lifecycle.cpp  quant_lm_head.cpp  quant_moe.cpp  rms_norm.cpp  rotary_extended.cpp  sgemv_naive.cpp
benchmarks/cmake/: RunBenchSmoke.cmake
benchmarks/harness/: alloc.h  bench_main.cpp  case.h  donotopt.h  donotopt_sink.cpp  env_info.cpp  env_info.h  json_writer.h  registry.cpp  report.cpp  report.h  shapes.h  timing.cpp  timing.h
cmake/: QuixiCoreCPUFeatures.cmake
docs/: architecture.md  colibri-port-matrix.md  contract.md  roadmap.md  sibling-port-matrix.md
include/quixicore_cpu/: backend.h  base_q.h  collectives.h  cpu_features.h  float_storage.h  lowbit.h  ops.h  packed_weights.h  qgemm.h  qgemv.h  qgemv_w8a8.h  quant_contract.h  quant_gemv.h  quant_import.h  quantization.h  rms_norm.h  status.h  threading.h  workspace.h
kernels/: README.md
kernels/activations/: README.md  activations_ref.cpp
kernels/attention/: README.md  attention_bitnet_kv3.cpp  attention_composites_ref.cpp  attention_extended_ref.cpp  attention_mxfp8.cpp  attention_q8_kv.cpp  attention_ref.cpp  attention_serving_ref.cpp  attention_turboquant.cpp  cross_attention_ref.cpp  mla_absorb_ref.cpp  mla_fp8_ref.cpp  rotary_positioned_ref.cpp  varlen_metadata_ref.cpp  vision_rope_ref.cpp
kernels/audio/: conv1d_ref.cpp  relative_attention_ref.cpp
kernels/collectives/: collectives_ref.cpp
kernels/common/: README.md  float_storage_access.h  fp16.h  validation.h
kernels/linear_attention/: gdn_ref.cpp  linear_attention_extended_ref.cpp  linear_attention_ref.cpp  llama_recurrent_ref.cpp
kernels/matmul/: dense_gemm_ref.cpp  lora_ref.cpp  matmul_extended_ref.cpp
kernels/moe/: README.md  moe_extended_ref.cpp  moe_ref.cpp
kernels/norms/: README.md  layer_norm_ref.cpp  norm_quant_ref.cpp  norms_extended_ref.cpp  rms_norm.h  rms_norm_neon.cpp  rms_norm_ref.cpp
kernels/optimizers/: adamw_ref.cpp
kernels/quantization/: README.md  activation_quant.h  activation_quant_ref.cpp  base_q_ref.cpp  gguf_pack_ref.cpp  gguf_pack_ref.h  gguf_ref.cpp  gguf_ref.h  int8_gemm.h  int8_gemm_avx2.cpp  int8_gemm_avx512.cpp  int8_gemm_dotprod.cpp  int8_gemm_i8mm.cpp  int8_gemm_ref.cpp  iq_pack_ref.cpp  iq_pack_ref.h  iq_tables.h  lm_head_ref.cpp  lowbit.h  lowbit_avx2.cpp  lowbit_avx512.cpp  lowbit_neon.cpp  lowbit_ref.cpp  lowbit_w8a8_avx2.cpp  lowbit_w8a8_avx512.cpp  lowbit_w8a8_dotprod.cpp  lowbit_w8a8_i8mm.cpp  lowbit_w8a8_ref.cpp  microscale_ref.cpp  qgemm_canonical.cpp  qgemm_canonical_avx2.cpp  qgemm_canonical_isa.h  qgemm_extended_ref.cpp  qgemm_panel.cpp  qgemm_ref.cpp  qgemv.h  qgemv_dotprod.cpp  qgemv_fused_ref.cpp  qgemv_gguf_avx2.cpp  qgemv_gguf_avx512.cpp  (+16 more)
kernels/sampling/: README.md  sampling_ref.cpp  selection_ref.cpp  speculative_ref.cpp  transforms_ref.cpp
kernels/serving/: README.md  basert_ref.cpp  kv_cache_extended_ref.cpp  serving_extended_ref.cpp  serving_quant_ref.cpp  serving_ref.cpp  sparse_metadata_ref.cpp
kernels/softmax/: README.md  softmax_ref.cpp
kernels/ssm/: selective_scan_ref.cpp  ssm_extended_ref.cpp
kernels/utils/: float_storage_avx2.cpp  float_storage_f16c.cpp  float_storage_isa.h  float_storage_neon.cpp  float_storage_ref.cpp  kd_ref.cpp  tensor_ops_ref.cpp  utils_extended_ref.cpp  utils_ref.cpp
kernels/vision/: conv_pool_ref.cpp  patch_ops_ref.cpp  vision_ref.cpp
parity/: README.md  dtype_coverage.tsv  full_quant_matrix.tsv  gaps.md  llama_glu_ops.tsv  llama_ops.tsv  llama_quants.tsv  llama_unary_ops.tsv  sibling_operations.tsv  sibling_quant_families.tsv  sibling_semantics.tsv  sources.tsv
perf/: baseline_status.md  optimization_status.md  perf.md
perf/results/: README.md
scripts/: bench  check_parity_manifest.py
src/: backend.cpp
src/dispatch/: README.md  int8_gemm.cpp  lowbit_w8a8.cpp  qgemv.cpp  qgemv_w8a8.cpp  quant_gemv.cpp  rms_norm.cpp  w8a32_gemm.cpp
src/memory/: README.md  packed_weights.cpp  quant_contract.cpp  workspace.cpp  workspace_internal.h
src/runtime/: cpu_features.cpp  cpu_features_aarch64.cpp  cpu_features_x86_64.cpp
src/threading/: README.md  thread_pool.cpp  thread_pool.h
tests/correctness/: README.md  test_base_q.cpp  test_basert.cpp  test_colibri_algorithms.cpp  test_conv_pool.cpp  test_extended_ops.cpp  test_float_storage.cpp  test_gdn.cpp  test_gguf_formats.cpp  test_int8_gemm.cpp  test_llama_recurrent.cpp  test_lora.cpp  test_lowbit.cpp  test_lowbit_w8a8.cpp  test_mla_absorb.cpp  test_moe_batch_union.cpp  test_norm_quant_matrix.cpp  test_ops.cpp  test_packed_weights.cpp  test_parallel_sampling.cpp  test_projection_ops.cpp  test_qgemv.cpp  test_qgemv_w8a8.cpp  test_quant_activation.cpp  test_quant_cache_attention.cpp  test_quant_contract.cpp  test_quant_gemv.cpp  test_quant_import.cpp  test_quant_projection_matrix.cpp  test_quant_serving_matrix.cpp  test_quantization.cpp  test_remaining_ops.cpp  test_rms_norm.cpp  test_serving_metadata.cpp  test_sibling_entrypoints.cpp  test_tensor_ops.cpp  test_w8a32_gemm.cpp
tests/smoke/: test_backend_status.cpp
tests/testdata/: README.md  quant_contract_golden.tsv  quant_import_golden.tsv
tests/unit/: test_benchmark_check.cpp  test_cpu_features.cpp  test_threading.cpp  test_workspace.cpp
tools/: quixicore_cpu_info.cpp
